<?xml version="1.0"?>
<package format="2">
  <name>erob_ros</name>
  <version>0.0.1</version>
  <description>The erob_ros package</description>
  <maintainer email="1349138349@qq.com"></maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>